--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
 	
 </nav>
 
-
-	<div class="header">
-	<img class="picture" src="header.jpg">
+	
+	<div class="row">
+	<div class="col-sm-12 page-title">
+	
 	</div>
+	</div>
+	
+
 	
 	
 <div class="container"> 		<!-- kontener główny -->
@@ -177,9 +181,7 @@
 	</form>
 	
 	<div class="icons"> 
-	<a class="facebook" href=""></a>
-	 <a class="twitter" href=""></a>
-	 <a class="youtube" href=""></a>
+	
 	
 	</div>
 	
