--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
 		<div class="row">						<!---pierwszy rząd--->
 		<div class="col-sm-6">
 		<img class="team-pic" src="person.jpg">
-		
 		</div>
 	
 		<div class="col-sm-6">	
@@ -191,7 +190,7 @@
 		<div class="col-sm-6">					<!--- mapka ---->
 		
 		
-		 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21092.673725874654!2d19.92679557885414!3d50.05771389195916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b120455da67%3A0xc3c7f5071b750d33!2zUnluZWsgR8WCw7N3bnk!5e0!3m2!1spl!2spl!4v1485721364731" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+		 <iframe class="map_big" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21092.673725874654!2d19.92679557885414!3d50.05771389195916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47165b120455da67%3A0xc3c7f5071b750d33!2zUnluZWsgR8WCw7N3bnk!5e0!3m2!1spl!2spl!4v1485721364731" ></iframe>
 		 
 		</div>
 		
