--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
 		<a href="milk/index.html" class=" thumbnail"> <img src="milk.jpg"/> </a>
 		</div>
 		
+		
 		<div class=" col-md-6 col-sm-12">
-		<a href="lefanco/index.html" class="thumbnail"> <img src="second.jpg"/> </a>
+		<a href="parallax/index.html" class="thumbnail"> <img src="parallax.jpg"/> </a>
 		</div>
 		
 	</div>
 	
-<div class="footer">
-All pictures come from <strong><a href="https://unsplash.com/ "> unsplash.com </a> </strong> 
-</div>
+
+	
+
 
 	
 </div>
