--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+﻿<DOCTYPE html>
+<head>
 
-    <title>Aleksandra Głuch</title>
+<title> Parallax </title>
 
+<link href="style.css" rel="stylesheet" type="text/css" >
 
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Muli:700" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+<script src="javascript.js"> </script>
 
-	
-	<link href="style.css" rel="stylesheet" type="text/css" >
+</head>
 
-  </head>
-  <body>
+<body>
 
-	
-	<div class="container">
-	
-	<div id="outside">
-	<h2> ALEKSANDRA GŁUCH </h2>
-	<h2> PORTFOLIO </h2>
-	</div>
-
-	<div class="row">
-	
-		<div class=" col-md-6 col-sm-12">
-		<a href="milk/index.html" class=" thumbnail"> <img src="milk.jpg"/> </a>
-		</div>
-		
-		
-		<div class=" col-md-6 col-sm-12">
-		<a href="parallax/index.html" class="thumbnail"> <img src="parallax.jpg"/> </a>
-		</div>
-		
+	<div id="mySidenav" class="sidenav">
+	<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	<a href="#"> About </a>
+	<a href="#"> Services</a>
+	<a href="#"> Client </a>
+	<a href="#"> Contact </a>
 	</div>
 	
-
 	
 
 
+	<div class="first">
 	
-</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-  </body>
+	
+		<div class="capition">
+		<span class="border"> BRAND NAME </span>
+		
+		</div>
+		
+		<div class="capition2">
+		<span class="border2"onclick="openNav()"> MENU </span>
+		
+		</div>
+		
+	</div>
+
+	<div class="tekst">
+	<h3 style="text-align: center;"> akapit </h3>
+	<p>Jak sobie poradzić ze współlokatorem-bałaganiarzem? Każdy, kto mieszkał z osobą, której obce jest pojęcie porządku, wie, że to nie lada problem. Amerykański komik Justin Cousson stracił ostatnio cierpliwość do swojego współlokatora, który zostawiał bałagan wszędzie tam, gdzie się pojawił. Cousson postanowił więc sprawdzić się jako... kurator i zamienił nieporządek w pasywno-agresywną galerię sztuki współczesnej. Brudne sztućce, pranie zalegające w pralce kolejny dzień czy przeterm mleko stały się dzięki temu instalacjami ready-made. </p>
+	<p>Wszystkim obiektom towarzyszą kartki z tytułem i z ceną (od 500 do 6 tys. dolarów). Kuratorskie przedsięwzięcie Coussona stało się popularne w internecie, kiedy komik zamieścił zdjęcia na swoim Twitterze. – Kocham to, że projekt odbił się tak szerokim echem na całym świecie. Nawet jeśli teraz ludzie stale wysyłają mi zdjęcia śmieci – mówi Cousson.
+	</p>
+	</div>
+	
+
+
+</body>
+
+
+
 </html>
