--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		
 		
 		<div class=" col-md-6 col-sm-12">
-		<a href="parallax/index.html" class="thumbnail"> <img src="parallax.jpg"/> </a>
+		<a href="parallax/index.html" class="thumbnail"> <img src="parallax.png"/> </a>
 		</div>
 		
 	</div>
