--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 	<div class="row">
 	
 		<div class=" col-md-6 col-sm-12">
-		<a href="milk/index.html" class=" thumbnail"> <img src="milk.jpg"/> </a>
+		<a href="milk/index2html" class=" thumbnail"> <img src="milk.jpg"/> </a>
 		</div>
 		
 		
 		<div class=" col-md-6 col-sm-12">
-		<a href="parallax/index.html" class="thumbnail"> <img src="parallax.png"/> </a>
+		<a href="parallax/index2.html" class="thumbnail"> <img src="parallax.png"/> </a>
 		</div>
 		
 	</div>
