--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
 
 	<div class="row">
 	
-		<div class=" col-md-6 col-sm-12">
+		<div class="col-sm-6 col-xs-12">
+		
 		<a href="milk/index2html" class=" thumbnail"> <img src="milk.jpg"/> </a>
 		</div>
-		
-		
-		<div class=" col-md-6 col-sm-12">
-		<a href="parallax/index2.html" class="thumbnail"> <img src="parallax.png"/> </a>
+		<div class="col-sm-6 col-xs-12">
+		<a href="wedding/index.html" class="thumbnail"> <img src="wedding.jpg"/> </a>
 		</div>
+		
+		<div class="col-sm-12 col-xs-12">
+		<a href="parallax/index2.html" class="thumbnail"> <img src="parallax.png"/> </a>
+		
+		</div>
+		
 		
 	</div>
 	
