--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	
 		<div class="col-sm-6 col-xs-12">
 		
-		<a href="milk/index2html" class=" thumbnail"> <img src="milk.jpg"/> </a>
+		<a href="milk/index.html" class=" thumbnail"> <img src="milk.jpg"/> </a>
 		</div>
 		<div class="col-sm-6 col-xs-12">
 		<a href="wedding/index.html" class="thumbnail"> <img src="wedding.jpg"/> </a>
